<resources>
    <string name="app_name">Medical</string>
    <string name="my_name">Medical</string>
    <string name="phone_number">18612235095</string>
    <string name="mine">我的</string>
    <string name="collect">收藏</string>
    <string name="clear">清理缓存</string>
    <string name="version_update">版本更新</string>
    <string name="feedback">意见反馈</string>
    <string name="last_version">最新版本</string>
    <string name="detail">详情</string>
    <string-array name="provinces">
        <item>广东</item>
        <item>北京</item>
        <item>福建</item>
        <item>浙江</item>
        <item>山东</item>
        <item>江苏</item>
        <item>河南</item>
        <item>安徽</item>
        <item>重庆</item>
        <item>湖北</item>
        <item>湖南</item>
        <item>河北</item>
        <item>四川</item>
        <item>天津</item>
        <item>吉林</item>
        <item>黑龙江</item>
        <item>江西</item>
        <item>辽宁</item>
        <item>内蒙古</item>
        <item>宁夏</item>
        <item>青海</item>
        <item>山西</item>
        <item>陕西</item>
        <item>上海</item>
        <item>新疆</item>
        <item>西藏</item>
        <item>云南</item>
        <item>甘肃</item>
        <item>贵州</item>
        <item>广西</item>
        <item>海南</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="picker_sure">确定</string>
    <string name="picker_cancel">取消</string>
    <string name="picker_title">选择时间</string>
    <string name="picker_year">Year</string>
    <string name="picker_month">Month</string>
    <string name="picker_day">Day</string>
    <string name="picker_hour">Hour</string>
    <string name="picker_minute">Minute</string>
</resources>
